--- a/data/Unknown.json
+++ b/data/Unknown.json
@@ -4,7 +4,7 @@
     "author": "popcat8bit",
     "creators": ["NineDice"],
     "verifier": "popcat8bit",
-    "verification": "https://www.youtube.com/watch?v=HXOda0sA5m4&ab_channel=Popcat8bit",
+    "verification": "https://www.youtube.com/watch?v=YbP-0uR9rbo&ab_channel=Popcat8bit",
     "percentToQualify": "100",
     "password": "46290",
     "records": [
